# unity-cli

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  publish.yml  tests.yml
unity_cli/: __init__.py  cli.py
unity_cli/core/: editor_bridge.py  prefab_manager.py  project.py  scene_manager.py  yaml_parser.py
unity_cli/editor/: UnityCLICapture.cs
unity_cli/utils/: guid.py  meta.py
